samples/_failures_safe/1761602326_f603f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab5104f6.c: In function ‘main’:
./samples/SAFE/__tmp_ab5104f6.c:168:9: error: expected declaration or statement at end of input
  168 |         if (!push_token(stack, tokens[i])) {
      |         ^~
./samples/SAFE/__tmp_ab5104f6.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab5104f6.c:168:9: error: expected declaration or statement at end of input
